--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.5",
+    "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   },
@@ -36,6 +37,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.2.0",
